fix z-index

--- a/css/main.css
+++ b/css/main.css
@@ -388,7 +388,7 @@ legend {
 .custom-select__title {
   cursor: pointer;
   position: relative;
-  z-index: 99;
+  z-index: 9;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   padding: 12px 35px 12px 10px;
